--- a/demo/demo.vcxproj
+++ b/demo/demo.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -122,7 +122,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>MVCamProptySheet.lib;MVGigE.lib;MVTickDlg.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>MVCamProptySheet.lib;MVGigE.lib;MVTickDlg.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Program Files\Microvision\E_EM\SDK\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <Midl>
@@ -215,7 +215,14 @@
     <None Include="res\demo.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\bitmap1.bmp" />
+    <Image Include="res\bitmap2.bmp" />
+    <Image Include="res\bitmap3.bmp" />
     <Image Include="res\demo.ico" />
+    <Image Include="shelby.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="待ちわびて-邓丽君.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
